Rename 'codes' (better alphabetization)

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 	path = facilities
 	url = git@emt.github.com:emt1234/facilities.git
 [submodule "codes"]
-	path = codes
+	path = pin-codes
 	url = git@emt.github.com:emt1234/door-codes.git
